--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -51,4 +52,9 @@ dependencies {
 
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-rc02")
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc02")
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3'
+
 }
