Retrofit and Coroutine

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.3'
 
+    // Retrofit 2
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
